--- a/contact.html
+++ b/contact.html
@@ -252,7 +252,7 @@
     <section class="section contact-section">
         <div class="container">
             <div class="contact-form-wrapper">
-                <form id="contactForm" action="https://formspree.io/f/YOUR_FORM_ID" method="POST">
+                <form id="contactForm" action="https://formspree.io/f/mqednbqw" method="POST">
                     <!-- Honeypot anti-spam field -->
                     <input type="text" name="_gotcha" style="display:none" tabindex="-1" autocomplete="off">
                     <div class="form-group">
